# nba_etl

./: .env  .env.example  README.md  pyproject.toml  setup.cfg  setup.py
nba_etl.egg-info/: SOURCES.txt
src/nba_etl/: __init__.py  definitions.py
src/nba_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nba_etl/assets/: embeddings.py  moneyball.py  nba_analytics_transformations.py
src/nba_etl/assets/factories/: dynamic_factory.py  source_asset_factory.py  static_factory.py
src/nba_etl/assets/static/: __init__.py
src/nba_etl/lib/: abstract_source.py  static_data_loader.py
src/nba_etl/resources/: mongo_io_manager.py  mongo_superduper_io_manager.py  postgres_io_manager.py
src/nba_etl/sources/: balldontlie_source.py
